--- a/root/index.html
+++ b/root/index.html
@@ -1,10 +1,15 @@
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<title>Toby's Website</title>
 	</head>
 	<body>
+		<div>
 		<h1>Hello</h1>
 		<p>Welcome to my website</p>
 		<img src="assets/meme.jpeg">
+		</div>
+		<p id="square">
+		</p>
 	</body>
 </html>
