--- a/root/index.html
+++ b/root/index.html
@@ -9,7 +9,27 @@
 		<p>Welcome to my website</p>
 		<img src="assets/meme.jpeg">
 		</div>
-		<p id="square">
-		</p>
+		<table>
+			<tr>
+				<td id="square"></td>
+				<td id="square"></td>
+				<td id="square"></td>
+				<td id="square"></td>		
+				<td id="square"></td>		
+				<td id="square"></td>			
+				<td id="square"></td>				
+				<td id="square"></td>
+			</tr>
+			<tr>
+				<td id="square"></td>
+				<td id="square"></td>
+				<td id="square"></td>
+				<td id="square"></td>		
+				<td id="square"></td>		
+				<td id="square"></td>			
+				<td id="square"></td>				
+				<td id="square"></td>
+			</tr>
+		</table>
 	</body>
 </html>
